# Course_search_for_vacancies

./: README.md  main.py  pyproject.toml
src/: api.py  json_saver.py  utils.py  vacancy.py
tests/: test_api.py  test_json_saver.py  test_utils.py  test_vacancy.py
