[tool.poetry]
name = "project 2- search for vacancies"
version = "0.1.0"
description = ""
authors = ["Ataraksia <1509lisavi@gmail.com>"]
readme = "README.md"
packages = [{include = "project 2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
adapter = "^0.1"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
stubs = "^1.0.0"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
exclude = 'venv'

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
)
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
